# canonicalwebteam.juju-logger

./: .env  .gitignore  README.md  app.py  cert  config.alloy  promtail.yaml  pyproject.toml  requirements.txt  rockcraft.yaml  rockcraft.yaml.old
charm/: charmcraft.yaml  tox.ini
charm/src/: charm.py
src/: __init__.py  app.py  collector.py  logger.py  utils.py
